[SELC-8115] Migration from springfox to springdoc using custom SwaggerConfig to mitigate differences in the generated openapi